// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<DeviceSecurityCard /> renders basic card 1`] = `
<div>
  <div
    class="mx_DeviceSecurityCard"
  >
    <div
      class="mx_DeviceSecurityCard_icon Verified"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceSecurityCard_content"
    >
      <p
        class="mx_DeviceSecurityCard_heading"
      >
        Verified session
      </p>
      <p
        class="mx_DeviceSecurityCard_description"
      >
        nice
      </p>
    </div>
  </div>
</div>
`;

exports[`<DeviceSecurityCard /> renders with children 1`] = `
<div>
  <div
    class="mx_DeviceSecurityCard"
  >
    <div
      class="mx_DeviceSecurityCard_icon Unverified"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceSecurityCard_content"
    >
      <p
        class="mx_DeviceSecurityCard_heading"
      >
        Verified session
      </p>
      <p
        class="mx_DeviceSecurityCard_description"
      >
        nice
      </p>
      <div
        class="mx_DeviceSecurityCard_actions"
      >
        <div>
          hey
        </div>
      </div>
    </div>
  </div>
</div>
`;
